# esp32-os

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.iot  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.m5stickc  sdkconfig.defaults.nnc2019  sdkconfig.defaults.ttgo  sdkconfig.old  select_board.sh
main/: CMakeLists.txt  CMakeLists.txt.bak  app.cpp  app.h  btn.cpp  component.mk  display.cpp  display.h  leds.cpp  leds.h  leds_alarm.cpp  leds_compass.cpp  leds_compass.h  mpu_task.cpp  nvs_settings.h  oled.h  oled_corona_fighter.cpp  oled_heart_sprite_oop.cpp  oled_ship.cpp  oled_snow.cpp  resources.h  utils.cpp  utils.h  wifi.cpp  wifi.h  ws2812_control.h
main/boards/: board_config.h  board_interface.h  boards.h
main/boards/TTGO/: board_TTGO.cpp  board_TTGO.h
main/boards/m5stickc/: board_config.h  board_m5stickc.cpp  board_run.cpp  oled.h  oled_corona_fighter.cpp  oled_ship.cpp  oled_snow.cpp
main/boards/nnc2019/: board_config.h  board_nnc2019.cpp  board_nnc2019.h  board_nnc2019_config.h  board_run.cpp  leds.cpp  leds.h  oled.h  oled_corona_fighter.cpp  oled_heart_sprite_oop.cpp  oled_ship.cpp  oled_snow.cpp
main/boards/ttgo/: board_config.h  oled_heart_sprite_oop.cpp  oled_snow.cpp
main/console/: cmd_join.cpp  cmd_join.h  cmd_npm.cpp  cmd_npm.h  cmd_version.cpp  console.cpp  console.h
main/hardware/: AXP192.cpp  AXP192.h  board_config.h  gpio.cpp  led_strip.cpp  mpu_task.cpp  mpu_task.h  touch_button.cpp  touch_button.h
main/resources/: resources.cpp  resources_corona.h  resources_heart.h  resources_ship.h
(+147 files in other folders)
